<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Altconv</string>
    <string name="menu_settings">Server URI</string>
    <string name="menu_download">Download courses</string>
    <string name="tv_from_curr">Source currency</string>
    <string name="tv_to_curr">Destination currency</string>
    <string name="te_value">Value to convert</string>
    <string name="tv_calc_value"></string>
    <string name="tv_set_tit">Type server URI</string>
    <string name="btn_convert">Convert</string>

    <string name="msg_empty_courses">Need to download courses first.</string>
    <string name="msg_restore_courses_fail">Unable to restore courses.</string>
    <string name="msg_type_amount">Type amount in </string>
    <string name="msg_download_ok">Downloading finished.</string>
    <string name="msg_download_fail">Downloading failed.</string>
    <string name="msg_conversion_failed">Conversion failed.</string>

    <string-array name="currencyType">
        <item>BTC</item>
        <item>LTC</item>
        <item>DRK</item>
        <item>NMC</item>
        <item>XRP</item>
    </string-array>
</resources>
