<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context=".MainActivity" >
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/tv_from_curr"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:text="@string/tv_from_curr" />
            <Spinner
                android:id="@+id/fromcurrency_spin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/tv_to_curr"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:text="@string/tv_to_curr" />
            <Spinner
                android:id="@+id/tocurrency_spin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />
        </LinearLayout>

        <EditText
            android:id="@+id/te_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/te_value"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/btn_convert"
            android:text="@string/btn_convert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/tv_calc_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textSize="24sp"
            android:gravity="center"
            android:text="@string/tv_calc_value" />


    </LinearLayout>
</RelativeLayout>
